--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,8 +1,9 @@
-<mat-list *ngIf="todos.length > 0">
-<!--<mat-list *ngIf="todo$ | async as todo">-->
-	<span *ngFor="let todo of todos">
+<!--<mat-list *ngIf="todos.length > 0">-->
+<mat-list *ngIf="(todos | async)?.length">
+	<span *ngFor="let todo of todos | async">
 	<mat-list-item>{{ todo.content }}</mat-list-item>
 	<mat-divider></mat-divider>
 	</span>	
 </mat-list>
-<p class="info-text mat-body-1" *ngIf="todos.length <= 0">Nothing Todo Yet!</p>
+<!--<p class="info-text mat-body-1" *ngIf="todos.length <= 0">Nothing Todo Yet!</p>-->
+<p class="info-text mat-body-1" *ngIf="!(todos | async)?.length">Nothing Todo Yet!</p>
